--- a/public/alerts.htm
+++ b/public/alerts.htm
@@ -1,36 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <p>Alertz go heer</p>
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Alert Overlay</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">  <link rel="stylesheet" href="styles/alerts.css">
 
-    <script type="text/javascript">
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <link type="text/css" rel="stylesheet" href="/styles/alerts.css">
+</head>
 
-      const p = document.querySelector('p');
+<body>
+  <div id="app">
+    <audio ref="audioPlayer"></audio>
+    <alert :alert="activeAlert" v-if="activeAlert"/>
+  </div>
+ 
+  <script src="/js/alerts.js"></script>
+</body>
 
-      let webSocket = new WebSocket(`ws://${window.location.host}/socket`);
-      webSocket.onmessage = function(e) {
-        const event = JSON.parse(e.data);
-
-        if (event.type === "follow") {
-          p.innerHTML = `You have a new follower: ${event.payload.username}`;
-        }
-        console.log(event);
-      }
-
-      webSocket.onopen = function(e) {
-        console.log('Connection opened');
-        webSocket.send('yo');
-      }
-
-      webSocket.onerror = function(e) {
-        console.log('Error: ', e);
-      }
-    </script>
-  </body>
 </html>
