--- a/public/bar.htm
+++ b/public/bar.htm
@@ -10,23 +10,37 @@
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">  <link rel="stylesheet" href="styles/alerts.css">
 
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  <link type="text/css" rel="stylesheet" href="/styles/alerts.css">
+  <link type="text/css" rel="stylesheet" href="/styles/bar.css">
 </head>
 
 <body> 
   <div id="app">
-    <audio ref="audioPlayer"></audio>
     <div id="bar">
-      <Transition mode="out-in">
-        <div class="mode" v-if="!activeAlert && commode">
-          <h1 v-html="commode.mode"></h1>
-          <p v-html="commode.activity"></p>
+      <div id="icons">
+        <div class="list">
+          <icon v-for="icon in icons" :icon="icon" :active="activeIcon" :key="icon.id" />
         </div>
-        <alert :alert="activeAlert" v-if="activeAlert"/>
-      </Transition>
+        <p>{{update}}</p>
+      </div>
+      <div id="alerts">
+        <audio ref="audioPlayer"></audio>
+        <Transition mode="out-in">
+          <div class="mode" v-if="!activeAlert && commode">
+            <h1 v-html="commode.mode"></h1>
+            <p v-html="commode.activity"></p>
+          </div>
+        </Transition>
+        <Transition mode="out-in">
+          <alert :alert="activeAlert" v-if="activeAlert"/>
+        </Transition>
+      </div>
     </div>
   </div>
  
+  <script>
+    const { createApp, onMounted, ref } = Vue
+  </script>
+  <script src="/js/icons.js"></script>
   <script src="/js/alerts.js"></script>
 </body>
 
