--- a/src/web/credits.htm
+++ b/src/web/credits.htm
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Credits Overlay</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Inter:ital,wght@0,400;0,700;1,400;1,700&family=Kanit:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="styles/credits.css">
   
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
