feat: add announce-modern overlay with glass-morphism card
- New announce-modern.htm/css/js — cinematic lower-third announcement
- Glass-morphism card (95% opaque, backdrop blur, subtle border)
- Revolving pink/blue gradient accent line
- Periodic sheen sweep across card (20s cycle)
- Styled span/link highlights in neon pink
- Slide+blur entrance/exit transitions
- Revert cron interval back to 5 minutes

--- a/src/web/announce-modern.htm
+++ b/src/web/announce-modern.htm
@@ -4,20 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chat Overlay - Modern</title>
+  <title>Announcement — Modern</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-  href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
-  rel="stylesheet">
-  <link type="text/css" rel="stylesheet" href="styles/chat-new.css">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+  <link type="text/css" rel="stylesheet" href="styles/announce-modern.css">
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 
-<body> 
+<body>
   <div id="app"></div>
-  <script src="/js/chat-new.js"></script>
+  <script src="/js/announce-modern.js"></script>
 </body>
 
 </html>
