--- a/src/web/chat-modern.htm
+++ b/src/web/chat-modern.htm
@@ -4,18 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alerts Overlay</title>
+  <title>Chat Overlay - Modern</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
-  <link type="text/css" rel="stylesheet" href="styles/alerts-new.css">
-
+  <link
+  href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
+  rel="stylesheet">
+  <link type="text/css" rel="stylesheet" href="styles/chat-modern.css">
+  
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 
-<body style="background-color: #000;">
+<body> 
   <div id="app"></div>
-  <script src="/js/alerts-new.js"></script>
+  <script src="/js/chat-modern.js"></script>
 </body>
 
 </html>
